# Smite

./: Cargo.toml  README.md
src/: lib.rs  util.rs
src/angle/: mod.rs  radians.rs
src/traits/: float.rs  generic.rs  integer.rs  mod.rs
src/types/: mod.rs
src/types/mat3/: mod.rs  tests.rs
src/types/mat4/: mod.rs  tests.rs
src/types/quat/: mod.rs  tests.rs
src/types/vec2/: mod.rs  swizzle.rs  tests.rs
src/types/vec3/: mod.rs  swizzle.rs  tests.rs
src/types/vec4/: mod.rs  swizzle.rs  tests.rs
