[package]
name = "smite"
description = "SIMD Math Implementation with Type-safe Execution"
authors = ["Flagship Team"]
keywords = ["algebra", "math", "simd"]
categories = ["game-development", "mathematics"]
repository = "https://github.com/Flagship-Engine/Smite"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2018"

[features]
default = ["swizzle"]
swizzle = ["vec2-swizzle", "vec3-swizzle", "vec4-swizzle"]
vec2-swizzle = []
vec3-swizzle = []
vec4-swizzle = []